--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <html>
-    <head>
-        <script src="https://raw.githubusercontent.com/versatica/JsSIP/master/dist/jssip.js"></script>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <script src="./jssip.js" type="text/javascript"></script>
+  </head>
+  <body>
+    <button onclick="connect()">connect</button>
+    <script lang="javascript">
+
+    function connect() {
+      var socket = new JsSIP.WebSocketInterface('wss://serge.dmitriev.fvds.ru:7443');
+      var configuration = {
+        sockets  : [ socket ],
+        uri      : 'sip:1000@62.109.24.81',
+        password : 'regity'
+      };
+
+      var ua = new JsSIP.UA(configuration);
+
+      ua.start();
+
+      // Register callbacks to desired call events
+      var eventHandlers = {
+        'progress': function(e) {
+          console.log('call is in progress');
+        },
+        'failed': function(e) {
+          console.log('call failed with cause: '+ e.data.cause);
+        },
+        'ended': function(e) {
+          console.log('call ended with cause: '+ e.data.cause);
+        },
+        'confirmed': function(e) {
+          console.log('call confirmed');
+        }
+      };
+
+      var options = {
+        'eventHandlers'    : eventHandlers,
+        'mediaConstraints' : { 'audio': true, 'video': false }
+      };
+      console.log('prepare');
+      setTimeout(()=>{
+        console.log('prepare, call')
+        var session = ua.call('sip:1002@62.109.24.81', options);
+      }, 3*1000)
+      
+    }
+    </script>
+  </body>
 </html>
 
 
