--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           console.log('call is in progress');
         },
         'failed': function(e) {
-          console.log('call failed with cause: '+ e.data.cause);
+          console.log('call failed with cause: '+ e);
         },
         'ended': function(e) {
-          console.log('call ended with cause: '+ e.data.cause);
+          console.log('call ended with cause: '+ e);
         },
         'confirmed': function(e) {
           console.log('call confirmed');
