--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
 
       var options = {
         'eventHandlers'    : eventHandlers,
-        'mediaConstraints' : { 'audio': true, 'video': false }
+        'mediaConstraints' : { 'audio': true, 'video': false },
+        'pcConfig': {
+          'iceServers': [
+            {'urls': ['stun:stun.stunprotocol.org:3478']},
+            {'urls': ['stun:stun.l.google.com:19302']}
+          ],
+        },
       };
       console.log('prepare');
       setTimeout(()=>{
