--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         ua = new JsSIP.UA(configuration);
 
         ua.start();
-        ua.on('newRTCSession', function(e){ 
-          console.log('new session', e);
+        ua.on('newRTCSession', function(data){ 
+          console.log('new session', data);
 
           var callOptions = {
             mediaConstraints: {
@@ -61,33 +61,38 @@
             }
           };
 
-          var session = e.session; 
+          var session = data.session; 
           if (session.direction === "incoming") {
               // incoming call here
               session.on("accepted",function(){
-                  // the call has answered
+                // the call has answered
+                console.log('accepted');
               });
               session.on("confirmed",function(){
-                  // this handler will be called for incoming calls too
+                // this handler will be called for incoming calls too
+                console.log('confirmed');
               });
               session.on("ended",function(){
                   // the call has ended
+                  console.log('ended');
               });
               session.on("failed",function(){
                   // unable to establish the call
+                  console.log('failed');
               });
               session.on('addstream', function(e){
                   // set remote audio stream (to listen to remote audio)
                   // remoteAudio is <audio> element on page
-                  remoteAudio.src = window.URL.createObjectURL(e.stream);
-                  remoteAudio.play();
+                console.log('try add stream');
+                remoteAudio.src = window.URL.createObjectURL(e.stream);
+                remoteAudio.play();
               });
               
               // Answer call
               session.answer(callOptions);
               
               // Reject call (or hang up it)
-              session.terminate();
+              // session.terminate();
           }
         });
       }
