--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
             mediaConstraints: {
               audio: true, // only audio calls
               video: false
-            }
+            },
+            'pcConfig': {
+              'iceServers': [
+                {'urls': ['stun:stun.stunprotocol.org:3478']},
+                {'urls': ['stun:stun.l.google.com:19302']}
+              ],
+            },
           };
 
           var session = data.session; 
