--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
                 console.log('peerconnection')
                 data.peerconnection.addEventListener('addstream', function (e) {
                   // set remote audio stream
+                  console.log('e', e);
                   const remoteAudio = document.createElement('audio');
-                  remoteAudio.src = window.URL.createObjectURL(e.stream);
+                  remoteAudio.src = e.stream;
                   remoteAudio.play();
                 });
               });
