--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <script src="./jssip.js" type="text/javascript"></script>
   </head>
   <body>
+    <audio id="audio"></audio>
+
     <button onclick="connect()">connect</button>
     <button onclick="call()">call</button>
 
@@ -88,11 +90,12 @@
                   console.log('failed');
               });
               session.on('peerconnection', function(data) {
-                console.log('peerconnection')
+                console.log('peerconnection', data);
                 data.peerconnection.addEventListener('addstream', function (e) {
                   // set remote audio stream
                   console.log('e', e);
-                  const remoteAudio = document.createElement('audio');
+                  var remoteAudio = document.getElementById('audio');
+                  // var remoteAudio = document.createElement('audio');
                   remoteAudio.srcObject = e.stream;
                   remoteAudio.play();
                 });
