--- a/index.html
+++ b/index.html
@@ -91,14 +91,22 @@
               });
               session.on('peerconnection', function(data) {
                 console.log('peerconnection', data);
+                var remoteStream = data.getRemoteStreams()[0];
+                console.log('remote stream', remoteStream);
+                var remoteAudio = document.getElementById('audio');
+                remoteAudio.srcObject = remoteStream;
+
+                /*
                 data.peerconnection.addEventListener('addstream', function (e) {
                   // set remote audio stream
                   console.log('e', e);
                   var remoteAudio = document.getElementById('audio');
+                  console.log('remote audio', remoteAudio);
                   // var remoteAudio = document.createElement('audio');
                   remoteAudio.srcObject = e.stream;
                   remoteAudio.play();
                 });
+                */
               });
               
               // Answer call
