--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <button onclick="call()">call</button>
 
     <script lang="javascript">
-
+      JsSIP.debug.enable('JsSIP:*');
       var ua;
       function call() {
         var eventHandlers = {
