--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
                   // var remoteAudio = document.getElementById('audio');
                   var remoteAudio = document.createElement('audio');
                   console.log('remote audio', remoteAudio);
-                  var mediaStream = e.streams[0];
+                  var mediaStream = trackEvent.streams[0];
                   console.log('mediastream', mediaStream);
                   remoteAudio.srcObject = mediaStream;
                   remoteAudio.play();
+                  console.log('remote audio', remoteAudio)
                 });
               });
               
