--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   console.log('mediastream', mediaStream);
                   remoteAudio.srcObject = mediaStream;
                   remoteAudio.play();
-                  console.log('remote audio', remoteAudio)
+                  console.log('remote audio', {remoteAudio})
                 });
               });
               
