--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
               session.on('addstream', function(e){
                   // set remote audio stream (to listen to remote audio)
                   // remoteAudio is <audio> element on page
+                  console.log('ADDSTREAM', e);
                   var remoteAudio = document.createElement('audio');
                   remoteAudio.src = window.URL.createObjectURL(e.stream);
                   remoteAudio.play();
