--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script lang="javascript">
       JsSIP.debug.enable('JsSIP:*');
       var ua;
+      var iceServers = [
+        {urls: ['stun:62.109.24.81:3478']},
+        // {urls: ['stun:stun.l.google.com:19302']},
+        // {urls: ['stun:stun.stunprotocol.org:3478']},
+      ];
       function call() {
         var eventHandlers = {
           'progress': function(e) {
@@ -37,10 +42,7 @@
             offerToReceiveAudio: true
           },
           pcConfig: {
-            iceServers: [
-              {urls: ['stun:stun.l.google.com:19302']},
-              {urls: ['stun:stun.stunprotocol.org:3478']},
-            ],
+            iceServers: iceServers,
           },
         };
         console.log('call');
@@ -70,10 +72,7 @@
               video: false
             },
             'pcConfig': {
-              'iceServers': [
-                {'urls': ['stun:stun.l.google.com:19302']},
-                {'urls': ['stun:stun.stunprotocol.org:3478']},
-              ],
+              iceServers: iceServers,
             },
           };
 
