--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <script lang="javascript">
       JsSIP.debug.enable('JsSIP:*');
       var ua;
-      var iceServers = [
-        {urls: ['stun:62.109.24.81:3478']},
-        // {urls: ['stun:stun.l.google.com:19302']},
-        // {urls: ['stun:stun.stunprotocol.org:3478']},
-      ];
+      var pcConfig = {
+        "iceServers":[
+          {
+            "urls":["turn:62.109.24.81:3478"],
+            "username":"user1",
+            "credential":"password1"
+          }],"iceTransportPolicy":"relay"};
+      
       function call() {
         var eventHandlers = {
           'progress': function(e) {
@@ -41,9 +44,7 @@
           rtcOfferConstraints: {
             offerToReceiveAudio: true
           },
-          pcConfig: {
-            iceServers: iceServers,
-          },
+          pcConfig: pcConfig,
         };
         console.log('call');
         var session = ua.call('sip:101@62.109.24.81', options);
@@ -71,9 +72,7 @@
               audio: true, // only audio calls
               video: false
             },
-            'pcConfig': {
-              iceServers: iceServers,
-            },
+            pcConfig: pcConfig,
           };
 
           var session = data.session;
